# x500_bag_recorder

./: CMakeLists.txt  package.xml
config/: params.yaml
include/x500_bag_recorder/: x500_bag_recorder_node.hpp
launch/: bag_recorder.launch.py
src/: x500_bag_recorder_node.cpp
